--- a/variation/views/index.ejs
+++ b/variation/views/index.ejs
@@ -9,9 +9,11 @@
 
 <body>
     <ul>
-        <li><a href="/url?url=/">URLに出力</a></li>
         <li><a href="/attr?attr=test">属性値に出力</a></li>
-        <li><a href="/js?name=yoden">JS内に出力</a></li>
+        <li><a href="/attr_esc?attr=test">属性値に出力(エスケープ)</a></li>
+        <li><a href="/url?url=/">URLに出力</a></li>
+        <li><a href="/dom?name=yoden">DOM操作で出力</a></li>
+        <li><a href="/length?attr=test">文字数制限</a></li>
     </ul>
 </body>
 
