--- a/variation/views/index.ejs
+++ b/variation/views/index.ejs
@@ -14,6 +14,7 @@
         <li><a href="/url?url=/">URLに出力</a></li>
         <li><a href="/dom?name=yoden">DOM操作で出力</a></li>
         <li><a href="/length?attr=test">文字数制限</a></li>
+        <li><a href="/delete?name=yoden">タグ削除</a></li>
     </ul>
 </body>
 
